// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar > can be interactive 1`] = `
<DocumentFragment>
  <span
    class="rmwc-icon rmwc-icon--component material-icons mdc-ripple-surface rmwc-avatar rmwc-avatar--interactive rmwc-avatar--has-image"
    title=""
  >
    <div
      class="rmwc-avatar__icon"
      style="background-image: url(test); background-size: cover;"
    />
    <div
      class="rmwc-avatar__text"
    >
      <div
        class="rmwc-avatar__text-inner"
      />
    </div>
  </span>
</DocumentFragment>
`;

exports[`Avatar > can be square 1`] = `
<DocumentFragment>
  <span
    class="rmwc-icon rmwc-icon--component material-icons rmwc-avatar rmwc-avatar--square rmwc-avatar--has-image"
    title=""
  >
    <div
      class="rmwc-avatar__icon"
      style="background-image: url(test); background-size: cover;"
    />
    <div
      class="rmwc-avatar__text"
    >
      <div
        class="rmwc-avatar__text-inner"
      />
    </div>
  </span>
</DocumentFragment>
`;

exports[`Avatar > can have different size 1`] = `
<DocumentFragment>
  <span
    class="rmwc-icon rmwc-icon--component material-icons rmwc-avatar rmwc-avatar--large rmwc-avatar--has-image"
    title=""
  >
    <div
      class="rmwc-avatar__icon"
      style="background-image: url(test); background-size: cover;"
    />
    <div
      class="rmwc-avatar__text"
    >
      <div
        class="rmwc-avatar__text-inner"
      />
    </div>
  </span>
</DocumentFragment>
`;

exports[`Avatar > renders 1`] = `
<DocumentFragment>
  <span
    class="rmwc-icon rmwc-icon--component material-icons rmwc-avatar rmwc-avatar--has-image"
    title=""
  >
    <div
      class="rmwc-avatar__icon"
      style="background-image: url(test); background-size: cover;"
    />
    <div
      class="rmwc-avatar__text"
    >
      <div
        class="rmwc-avatar__text-inner"
      />
    </div>
  </span>
</DocumentFragment>
`;

exports[`Avatar > renders as AvatarCount with value of 4 1`] = `
<DocumentFragment>
  <span
    class="rmwc-icon rmwc-icon--component material-icons rmwc-avatar rmwc-avatar--count"
  >
    <div
      class="rmwc-avatar__text"
    >
      <div
        class="rmwc-avatar__text-inner"
      >
        4
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`Avatar > renders as AvatarGroup 1`] = `
<DocumentFragment>
  <div
    class="rmwc-avatar-group"
  />
</DocumentFragment>
`;

exports[`Avatar > renders with contain 1`] = `
<DocumentFragment>
  <span
    class="rmwc-icon rmwc-icon--component material-icons rmwc-avatar rmwc-avatar--has-image"
    title=""
  >
    <div
      class="rmwc-avatar__icon"
      style="background-image: url(test); background-size: contain;"
    />
    <div
      class="rmwc-avatar__text"
    >
      <div
        class="rmwc-avatar__text-inner"
      />
    </div>
  </span>
</DocumentFragment>
`;
